# travel-planning-agent

./: README.md  pyproject.toml
eval/: eval_criteria.py  eval_tracker.py  goldens.csv  goldens_itinerary.csv  run_eval.py  run_eval_itinerary.py
infra/: guadrails_agent.tf
src/: .env  graph.py  knowledge_base.py  main.py  memory.py  state.py  user_profiles.py
src/agents/: __init__.py  flight_searcher.py  hotel_searcher.py  itinerary_planner.py  trip_analyzer.py
src/data/: mock_kb.json
src/mcp_servers/: weather_server.py
src/system_prompts/travel/: flight_searcher_prompt.txt  hotel_searcher_prompt.txt  itinerary_planner_prompt.txt  trip_analyzer_prompt.txt
src/utils/: bedrock_client.py  mcp_client.py  prompt_loader.py
