[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "travel-planning-agent"
version = "0.1.0"
description = "Travel Planning Agent with CoALA Memory"
requires-python = ">=3.9"
dependencies = [
    "langchain>=0.1.0",
    "langgraph>=0.0.5",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "langchain-aws>=0.1.0",
    "boto3>=1.28.0",
    "anthropic>=0.7.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "aiosqlite>=0.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "pytest-asyncio>=0.24.0",
]
eval = [
    "deepeval>=1.0.0",
    "mlflow>=2.0.0",
]

[tool.black]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
